kubernetes/apps/tandoor/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app tandoor
  labels:
    app.kubernetes.io/name: *app
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      # no arm64 support
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: ghcr.io/tandoorrecipes/recipes:2.6.15@sha256:2e759dd1478a2ed119ee474e28522079fb1cfa50b3fd25cba89f6b9a67abad72
          name: tandoor
          ports:
            - containerPort: &port 80
              name: http
          livenessProbe: &probes
            httpGet:
              path: /
              port: *port
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe: *probes
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          volumeMounts:
            - name: *app
              mountPath: /data
            - name: *app
              mountPath: /data/media
              subPath: media
            - name: *app
              mountPath: /data/static
              subPath: static
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /opt/recipes/http.d
      volumes:
        - name: *app
          persistentVolumeClaim:
            claimName: *app
        - name: config
          configMap:
            name: config
        - name: tmp
          emptyDir: {}
